# practice-c-cpp

user_interfaces/: .gitignore  .lsan_suppressions  CMakeLists.txt  imgui.ini
user_interfaces/include/: diff_viewer.hpp  main.hpp  window.hpp
user_interfaces/src/: diff_viewer.cpp  main.cpp  window.cpp
